# ShutTUM

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  LICENSE.txt  README.md  devices.html  downloads.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sequence.html  setup.py  values.html
.doctrees/: devices.doctree  downloads.doctree  environment.pickle  index.doctree  sequence.doctree  values.doctree
Docs/: Class-Diagram.mdj  Makefile  conf.py  dataset.rst  devices.rst  downloads.rst  index.rst  make.bat  pushdocstoremove.bat  sequence.rst  values.rst
Docs/_static/: style.css
Examples/: ImuVisualizer.py  SimplePreview.py  rosplayback.py
Examples/matlab/: shuttum.m  stereotum.m
Examples/python/: analyze.py  dsorunner.py  imuvisualizer.py  previewer.py
Examples/src/playback/: CMakeLists.txt  package.xml
Examples/src/playback/scripts/: rosplayback.py
Python/Docs/: Makefile  conf.py  dataset.rst  devices.rst  index.rst  make.bat  make_docs.py  pushdocstoremove.bat  values.rst
Python/StereoTUM/: __init__.py  dataset.py  devices.py  groundtruth.py  image.py  imuvalue.py  setup.py  (+3 more)
ShutTUM/: __init__.py  devices.py  sequence.py  setup.py  values.py
StereoTUM/: __init__.py  dataset.py  dataset.py~  devices.py  sequence.py  setup.py  values.py
Tests/: test_dataset.py  test_framedrops.py  test_groundtruth.py  test_image_archives.py  test_imuvalue.py  test_interpolation.py  test_sequence.py  test_stereoimage.py  test_value.py
_modules/: ShutTUM.html  index.html
_sources/: index.rst.txt  values.rst.txt
docs/: index.html
(+87 files in other folders)
